<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    VIDEO CONFIGURATION
    <com.ami.customui.CustomCategoryPreference android:key="@string/pref_video_config"
                        android:order="0" android:title="@string/setting_video_configuration">
        <com.ami.customui.CustomListPreference android:defaultValue="1"
                                               android:entries="@array/setting_resolution_entries"
                                               android:entryValues="@array/setting_resolution_values"
                                               android:icon="@drawable/ic_hd_white_24dp"
                                               android:key="@string/pref_resolution"
                                               android:title="@string/video_resolution_title">
        </com.ami.customui.CustomListPreference>
        <com.ami.customui.CustomListPreference android:defaultValue="4"
                                               android:entries="@array/setting_frame_rate_entries"
                                               android:entryValues="@array/setting_frame_rate_values"
                                               android:icon="@drawable/ic_frame_rate_white_24dp"
                                               android:key="@string/pref_frame_rate"
                                               android:title="@string/video_frame_rate_title">
        </com.ami.customui.CustomListPreference>
        <com.ami.customui.CustomListPreference android:defaultValue="1"
                                               android:entries="@array/setting_bit_rate_entries"
                                               android:entryValues="@array/setting_bit_rate_values"
                                               android:icon="@drawable/ic_high_quality_white_24dp"
                                               android:key="@string/pref_bit_rate"
                                               android:title="@string/video_bit_rate_title"></com.ami.customui.CustomListPreference>
        <com.ami.customui.CustomListPreference android:defaultValue="1"
                                               android:entries="@array/setting_orientation_entries"
                                               android:entryValues="@array/setting_orientation_values"
                                               android:icon="@drawable/ic_screen_rotation_white_24dp"
                                               android:key="@string/pref_orientation"
                                               android:title="@string/video_orientation_title"></com.ami.customui.CustomListPreference>
    </com.ami.customui.CustomCategoryPreference>
    <!--AUDIO CONFIGURATION-->
    <com.ami.customui.CustomCategoryPreference android:key="@string/pref_audio_config" android:order="1"
                        android:title="@string/setting_audio_configuration">
        <com.ami.customui.CustomSwitchPreference android:defaultValue="true" android:icon="@drawable/ic_mic_white_24dp"
                          android:key="@string/pref_record_audio_enable"
                          android:summary="@string/audio_recorder_sum"
                          android:title="@string/audio_recorder_title"></com.ami.customui.CustomSwitchPreference>
    </com.ami.customui.CustomCategoryPreference>


    <com.ami.customui.CustomCategoryPreference android:key="@string/pref_camera_config" android:order="2"
                        android:title="@string/setting_camera_configuration">
        <com.ami.customui.CustomSwitchPreference android:defaultValue="false"
                          android:icon="@drawable/ic_videocam_white_24dp"
                          android:key="@string/pref_camera_show_enable"
                          android:summary="@string/camera_sum"
                          android:title="@string/camera_title"></com.ami.customui.CustomSwitchPreference>
    </com.ami.customui.CustomCategoryPreference>

    <com.ami.customui.CustomCategoryPreference android:key="@string/pref_other_config" android:order="3"
                        android:title="@string/setting_other_configuration">
        <com.ami.customui.CustomSwitchPreference android:defaultValue="true"
            android:icon="@drawable/ic_touch_app_white_24dp"
            android:key="@string/pref_auto_record_enable"
            android:summary="@string/auto_record_summary"
            android:title="@string/auto_record_title"></com.ami.customui.CustomSwitchPreference>

        <com.ami.customui.CustomSwitchPreference android:defaultValue="false"
                          android:icon="@drawable/ic_touch_app_white_24dp"
                          android:key="@string/pref_show_touches_enable"
                          android:summary="@string/touches_show_sum"
                          android:title="@string/touches_show_title"></com.ami.customui.CustomSwitchPreference>

        <com.ami.customui.CustomSwitchPreference android:defaultValue="true" android:icon="@drawable/ic_timer_24dp"
                          android:key="@string/pref_countdown_enable"
                          android:summary="@string/count_down_sum"
                          android:title="@string/count_down_title"></com.ami.customui.CustomSwitchPreference>

        <com.ami.customui.CustomListPreference android:defaultValue="3"
                                               android:entries="@array/setting_countdown_entries"
                                               android:entryValues="@array/setting_countdown_values"
                                               android:icon="@drawable/ic_countdown_value_white_24dp"
                                               android:key="@string/pref_counddown_value"
                                               android:title="@string/count_down_value_title"></com.ami.customui.CustomListPreference>

    </com.ami.customui.CustomCategoryPreference>

    <com.ami.customui.CustomCategoryPreference android:order="4" android:title="@string/privacy_policy">
        <com.ami.customui.CustomPreference android:icon="@drawable/ic_flag"
                    android:key="privacy_policy"
                    android:title="@string/privacy_policy"
        >

        </com.ami.customui.CustomPreference>
    </com.ami.customui.CustomCategoryPreference>

</PreferenceScreen>